# challengue-fintelligentia

./: Cargo.toml  README.md
src/: assets.rs  main.rs  market_data_manager.rs  market_simulator.rs
src/data_consumers/: data_consumer.rs  futures_contract_consumer.rs  mod.rs  ws_consumer.rs
src/data_providers/: data_provider.rs  market_simulator.rs  mod.rs
