[package]
name = "challengue-fintelligentia"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = ">=0.8"
tokio = { version = ">=1", features = ["full"] }
tokio-tungstenite = "0.15"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.81"